--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Assemblyline Chrome Extension",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "npm run clean && webpack",
+    "watch": "webpack --watch",
+    "clean": "rm -rf build && rm -rf dist"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/assemblyline/assemblyline-chrome#readme",
   "devDependencies": {
     "copy-webpack-plugin": "^2.1.1",
+    "crx-webpack-plugin": "^0.1.3",
     "handlebars": "^4.0.5",
     "handlebars-template-loader": "^0.6.0",
     "lodash": "^4.11.1",
