--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.0.5",
     "handlebars-template-loader": "^0.6.0",
     "lodash": "^4.11.1",
+    "uglify-loader": "^1.3.0",
     "webpack": "^1.13.0"
   }
 }
