--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Assemblyline",
-    "version": "0.0.10",
+    "version": "0.0.11",
     "description": "Deployments from within Github",
     "browser_action": {
       "default_title": "Assemblyine",
@@ -40,6 +40,7 @@
         "webNavigation",
         "tabs",
         "storage",
+        "unlimitedStorage",
         "https://api.github.com/"
     ]
 }
